<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SettingActivity">

    <ImageView
        android:id="@+id/curve_background"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/curve_background" />

    <ImageView
        android:id="@+id/logo_bumisuksesindo"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_bumisuksesindo_white"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/door_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:foregroundTint="#AB9A9A"
        android:text="@string/door"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/curve_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/door_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:foregroundTint="#AB9A9A"
        android:text="@string/empty"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/curve_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#AB9A9A"
        android:text="@string/setting"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/curve_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <View
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curve_background"
        app:layout_constraintVertical_bias="0.517" />

    <TextView
        android:id="@+id/serverAddressLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/server_address"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curve_background" />

    <EditText
        android:id="@+id/editTextServerAddress"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="username"
        android:background="@drawable/text_field"
        android:hint="@string/hint_input_server_address"
        android:textColorHint="#707080"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverAddressLabel" />

    <TextView
        android:id="@+id/doorIDLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/input_door_id"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextServerAddress" />

    <EditText
        android:id="@+id/editTextDoorID"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="username"
        android:background="@drawable/text_field"
        android:hint="@string/hint_input_door_id"
        android:textColorHint="#707080"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doorIDLabel" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/input_username"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDoorID" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="username"
        android:background="@drawable/text_field"
        android:hint="@string/hint_input_username"
        android:textColorHint="#707080"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLabel" />


    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/input_password"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/text_field"
        android:hint="@string/hint_input_password"
        android:inputType="textPassword"
        android:textColorHint="#707080"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <ImageView
        android:id="@+id/togglePasswordVisibility"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="38dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_eye_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextPassword" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_cancel"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/button_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:background="@drawable/button"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toEndOf="@id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="888dp"
        android:layout_marginBottom="39dp"
        android:text="@string/copyright"
        android:textColor="#242424"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="888dp"
        android:layout_marginBottom="14dp"
        android:text="@string/copyright_team"
        android:textColor="#242424"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>