<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/curve_background"
        android:layout_width="0dp"
        android:layout_height="290dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/curve_background" />

    <ImageView
        android:id="@+id/logo_bumisuksesindo"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_bumisuksesindo_white"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/door_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:foregroundTint="#AB9A9A"
        android:text="@string/door"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/curve_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/door_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:foregroundTint="#AB9A9A"
        android:text="@string/empty"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/curve_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221" />

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#AB9A9A"
        android:text="@string/tapping"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/curve_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77" />

    <View
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curve_background"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/body_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tapping_title_info"
        android:textColor="#1A4683"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curve_background" />

    <ImageView
        android:id="@+id/icon_signal"
        android:layout_width="374dp"
        android:layout_height="485dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curve_background"
        app:srcCompat="@drawable/signal"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="888dp"
        android:layout_marginBottom="39dp"
        android:text="@string/copyright"
        android:textColor="#242424"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/copyright_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="888dp"
        android:layout_marginBottom="14dp"
        android:text="@string/copyright_team"
        android:textColor="#242424"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/result_payload_container_image"
        android:layout_width="215dp"
        android:layout_height="215dp"
        android:layout_marginTop="156dp"
        android:foreground="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/curve_background" />

    <ImageView
        android:id="@+id/result_payload_image"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:contentDescription="@null"
        android:visibility="gone"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="@+id/result_payload_container_image"
        app:layout_constraintEnd_toEndOf="@+id/result_payload_container_image"
        app:layout_constraintStart_toStartOf="@+id/result_payload_container_image"
        app:layout_constraintTop_toTopOf="@+id/result_payload_container_image" />

    <TextView
        android:id="@+id/result_payload_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="Aristo Caesar Pratama"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_payload_container_image" />

    <TextView
        android:id="@+id/result_payload_card_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="C244870"
        android:textColor="#1A4683"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_payload_name" />

    <TextView
        android:id="@+id/result_payload_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COM"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        android:textSize="26sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_payload_card_id" />

    <TextView
        android:id="@+id/result_payload_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PT. BUMI SUKSESINDO"
        android:textColor="@color/black"
        android:layout_marginTop="0dp"
        android:textSize="26sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_payload_department" />


</androidx.constraintlayout.widget.ConstraintLayout>
